--- a/style.css
+++ b/style.css
@@ -1,23 +1,117 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
+
+
 *{
     border-style: border-box;
 }
 
 body{
     background-color: #4444;
+    font-family: "Roboto", sans-serif;
 }
 .content{
+    background-color: #E5E5E5;
     width: 375px;
     height: 670px;
-}
-
-.chat{
-    background-color: #E5E5E5;
-    width: 100%;
-    height: 100%;
-
     position: relative;
 }
 
+/*Menu Usuário*/
+.content-options{
+    width: 100%;
+    height: 100%;
+    background-color: #111111;
+    opacity: 0.60;
+    position: absolute;
+    z-index: 1;
+    
+}
+.menu-opcoes{ 
+    background-color: #E5E5E5;
+    width: 258px;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 116px;
+    z-index: 1;
+
+    
+}
+.opcoes{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+.opcoes .titulo{
+    height: 84px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ .contato {
+    width: 100%;
+    height: 36px;
+    
+    display: flex;
+    flex-direction: row;
+    margin: 1px auto;
+ }
+
+ .contato div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ .contato ion-icon{
+    font-size: 20px;
+    margin: auto;
+    padding: 5px;
+ }
+
+ .visibilidade{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+.visibilidade .titulo{
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ .status {
+    width: 100%;
+    height: 36px;
+    
+    display: flex;
+    flex-direction: row;
+    margin: 1px auto;
+ }
+
+ .status div{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ .status ion-icon{
+    font-size: 20px;
+    margin: auto;
+    padding: 5px;
+ }
+
+.status div ion-icon{
+    color: #28BB25;
+}
+
+
+/*Chat*/
 .menu{
     background-color: #fff;
     width: 100%;
@@ -52,7 +146,8 @@ body{
     margin: 0 22px;
 }
 
-.enviar-mensagem{    
+.enviar-mensagem{
+    
     width: 375px;
     
     display: flex;
@@ -71,28 +166,14 @@ body{
 
 input{
     width: 300px;
-    height: 75%;
+    height: 100%;
     
     margin: 0 22px;
     border: none;
 }
 
-
-.content-options{
-    background-color: #111111;
-    opacity: 0.9;
-    position: relative;
-    z-index: 1;
-}
-.menu-opcoes{
-    
-    background-color: #E5E5E5;
-    position: absolute;
-    top: 0;
-    left: 100px;
-}
-
-
 .escondido {
     display: none;
 }
+
+
