--- a/style.css
+++ b/style.css
@@ -112,10 +112,20 @@ body{
 
 
 /*Chat*/
+
+.chat{
+    width: 100%;
+    height: 100%;
+
+    position: relative;
+}
 .menu{
     background-color: #fff;
     width: 100%;
     height: 80px;
+    position: absolute;
+
+    z-index: 1;
 }
 
 
@@ -127,7 +137,7 @@ body{
     justify-content: space-between;
     
     
-    position: absolute;
+    
     top: 0;
     left: 0;
 }
@@ -147,7 +157,11 @@ body{
 }
 
 .msg-box{
-    
+    height: 500px;
+    margin-top: 80px;
+
+    overflow: hidden;
+    position: absolute;
 }
 
 .enviar-mensagem{
@@ -158,7 +172,6 @@ body{
     align-items: center;
     justify-content: space-between;
 
-    position: absolute;
     bottom: 0;
     left: 0;
 }
