--- a/style.css
+++ b/style.css
@@ -163,6 +163,23 @@ body{
     overflow: hidden;
     position: absolute;
 }
+li{
+    background-color: #fff;
+    height: 40px;
+    
+    word-break: break-word;
+
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    
+    margin: 3px 0;
+    padding: 0 9px;
+}
+/*parei aqui, bug da cor?*/
+li .entra,li .sai{
+    background-color: red;
+}
 
 .enviar-mensagem{
     
