--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
     display: flex;
     flex-direction: column;
     margin: auto;
+    overflow-y: scroll;    
 }
 .opcoes .titulo{
     height: 84px;
@@ -83,7 +84,7 @@ body{
     justify-content: center;
     align-items: center;
 }
- .status {
+ .restricao {
     width: 100%;
     height: 36px;
     
@@ -92,7 +93,7 @@ body{
     margin: 1px auto;
  }
 
- .status div{
+ .restricao div{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -100,13 +101,13 @@ body{
     align-items: center;
  }
 
- .status ion-icon{
+ .restricao ion-icon{
     font-size: 20px;
     margin: auto;
     padding: 5px;
  }
 
-.status div ion-icon{
+.restricao div ion-icon{
     color: #28BB25;
 }
 
